--- a/index.html
+++ b/index.html
@@ -13,12 +13,34 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar">
 
+  <!--======Side Bar=========-->
+
+  <div class="sidebar ">
+
+    <div class="side-menu">
+      <a href="#banner">Home</a>
+      <a href="#Archive">Archive</a>
+      <a href="#momment">Winning Moment</a>
+    </div>
+
+    <div class="sidber-icon">
+      <a href="#"> <i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    </div>
+    <i class="fa fa-bars fa-close side-click" aria-hidden="true"></i>
+
+    <p>© 2021 MISS UNIVERSE BANGLADESH.
+      Made With Love by ABU YOUSUF.</p>
+
+  </div>
 
 <!--===============Nav Part Goes Here Bellow=================-->
 
-<nav class="navbar navbar-expand-lg navbar-light nav-bg">
+<nav class="navbar navbar-expand-lg navbar-light " id="navbar">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="images/logo.png">
@@ -29,13 +51,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav m-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#banner">Home</a>
+          <a class="nav-link "  href="#banner">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#Archive">Archive</a>
+          <a class="nav-link " href="#Archive">Archive</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#momment">Winning Moment</a>
+          <a class="nav-link "  href="#momment">Winning Moment</a>
         </li>
        
       </ul>
